# blitz

./: Cargo.toml  README.md
src/: adt.rs  analysis.rs  bitcode.rs  bitstream.rs  blitz.rs  code_gen.rs  execution_engine.rs  ir.rs  ir_printer.rs  ir_reader.rs  lib.rs  main.rs  option.rs  passes.rs  profile_data.rs  remarks.rs  support.rs  target_parser.rs  transforms.rs  xray.rs
src/adt/: address_ranges.rs  ap_float.rs  ap_int.rs  array_ref.rs  bit.rs  bitfields.rs  delta_algorithm.rs  dense_map.rs  dense_map_info.rs  dense_set.rs  directed_graph.rs  floating_point_mode.rs  folding_set.rs  hashing.rs  ilist.rs  immutable_list.rs  immutable_set.rs  indexed_map.rs  none.rs  set_vector.rs  small_ptr_set.rs  small_set.rs  small_vector.rs  statistic.rs  string_extras.rs  string_map.rs  string_ref.rs  string_switch.rs  twine.rs
src/analysis/: Cargo.toml  call_graph.rs  call_printer.rs  cfg.rs  cfg_printer.rs  code_metrics.rs  cost_model.rs  cycle_analysis.rs  ddg.rs  ddg_printer.rs  delinearization.rs  dependence_analysis.rs  dependence_graph_builder.rs  dom_printer.rs  dom_tree_updater.rs  dominance_frontier.rs  function_properties_analysis.rs  globals_mod_ref.rs  guard_utils.rs  heat_utils.rs  indirect_call_promotion_analysis.rs  indirect_call_visitor.rs  inline_advisor.rs  inline_cost.rs  inline_model_feature_maps.rs  inline_order.rs  inline_size_estimator_analysis.rs  inst_count.rs  (+65 more)
src/service/: Cargo.toml
src/service/src/: algebraic_simplifier.rs  all_gather_broadcast_reorder.rs  all_gather_combiner.rs  all_gather_decomposer.rs  all_reduce_combiner.rs  all_reduce_contiguous.rs  all_reduce_folder.rs  all_reduce_key.rs  all_reduce_promotion.rs  all_reduce_reassociate.rs  all_reduce_simplifier.rs  all_to_all_decomposer.rs  allocation_tracker.rs  ar_crs_combiner.rs  async_collective_creator.rs  backend.rs  batch_dot_simplification.rs  batchnorm_expander.rs  bfloat16_conversion_folding.rs  bfloat16_propagation.rs  bitcast_dtypes_expander.rs  blitz_computation.rs  broadcast_canonicalizer.rs  buffer_value.rs  call_graph.rs  call_inliner.rs  change_op_data_type.rs  channel_tracker.rs  cholesky_expander.rs  collective_combiner_utils.rs  collective_decomposer_utils.rs  collective_ops_utils.rs  collective_opt_utils.rs  collective_permute_decomposesr.rs  collective_pipeliner.rs  collective_transformation_reorder.rs  collectives_schedule_linearizer.rs  comparison_expander.rs  compilation_cache.rs  compilation_environments.rs  (+127 more)
src/service/src/graphcycles/: graphcycles.rs  mod.rs
(+679 files in other folders)
