[package]
name = "blitz"
version = "0.1.0"
authors = ["toshihidefujii"]
edition = "2021"

[dependencies]
#generic-array = "0.14.4"
#num_cpus = "1.13.0"
#rsys = "0.1.0"
#page_size = "0.5.0"
#rand = "0.8.5"

[workspace]
members = [
  "src/common",
  "src/core",
]

[workspace.dependencies]
common = { path = "src/common" }
core = { path = "src/core" }