[package]
name = "blitz"
version = "0.1.0"
authors = ["toshihidefujii"]
edition = "2021"

[dependencies]
#generic-array = "0.14.4"
#num_cpus = "1.13.0"
#rsys = "0.1.0"
#page_size = "0.5.0"
#rand = "0.8.5"

[workspace]
members = [
  "src/analysis",
  "src/client",
  "src/common",
  "src/ffi",
  "src/hlo",
  "src/mlir",
  "src/runtime",
  "src/service",
  "src/stream_executor"
]

[workspace.dependencies]
analysis = { path = "src/analysis" }
client = { path = "src/client" }
common = { path = "src/common" }
ffi = { path = "src/ffi" }
hlo = { path = "src/hlo" }
mlir = { path = "src/mlir" }
runtime = { path = "src/runtime" }
service = { path = "src/service" }
stream_executor = { path = "src/stream_executor" }
