[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { workspace = true }
hlo = { workspace = true }
stream_executor = { workspace = true }
num = "0.4.3"
regex = "1.10.4"
